Translation de-DE 1/5

--- a/locales/de-DE.json
+++ b/locales/de-DE.json
@@ -1,9 +1,9 @@
 {
     "page.loading": "Lade...",
-    "page.saving": "<p>Speichere.</p>\n<p>Dies kann einen Moment dauern.</p>",
+    "page.saving": "<p>Speichern.</p>\n<p>Dies kann einen Moment dauern.</p>",
     "mathjax.math processing error": "\"{{message}}\" beim Texten von <code>{{expression}}</code>",
     "die.numbas failed": "Numbas konnte nicht gestartet werden",
-    "die.sorry": "Entschuldigung, Numbas hat einen Fehler festgestellt, der eine weiter Bearbeitung unmöglich macht. Es folgt eine BEschreibung des Fehlers.",
+    "die.sorry": "Entschuldigung, Numbas hat einen Fehler festgestellt, der eine weitere Bearbeitung unmöglich macht. Fehlermeldung:",
     "die.error": "Fehler",
     "modal.ok": "OK",
     "modal.cancel": "Abbrechen",
@@ -19,44 +19,44 @@
     "exam.review header": "Überblick: ",
     "frontpage.start": "Start",
     "suspend.paused header": "Angehalten",
-    "suspend.exam suspended": "Exam wurde unterbrochen. Drücke <em>Fortfahren</em> um weiter zu gehen.",
-    "suspend.you can resume": "You will be able to resume this session the next time you start this activity.",
+    "suspend.exam suspended": "Prüfung wurde unterbrochen. Drücke <em>Fortfahren</em> um weiter zu machen.",
+    "suspend.you can resume": "Du kannst diese Session beim nächsten Start der Aktivität fortsetzen.",
     "suspend.resume": "Fortfahren",
-    "result.exit": "Exit Exam",
-    "result.print": "Print this results summary",
-    "result.exam summary": "Exam Summary",
-    "result.performance summary": "Performance Summary",
-    "result.exam start": "Exam Start:",
-    "result.exam stop": "Exam beendet:",
-    "result.time spent": "Time Spent:",
-    "result.questions attempted": "Questions Attempted:",
-    "result.score": "Score:",
-    "result.result": "Result:",
-    "result.question number": "Question Number",
-    "result.question score": "Score",
-    "result.question review title": "Review this question",
+    "result.exit": "Prüfung beenden",
+    "result.print": "Zusammenfassung der Resultate drucken",
+    "result.exam summary": "Zusammenfassung Prüfung",
+    "result.performance summary": "Zusammenfassung Leistung",
+    "result.exam start": "Prüfungsstart:",
+    "result.exam stop": "Prüfung beendet:",
+    "result.time spent": "Benötigte Zeit",
+    "result.questions attempted": "Anzahl versuchte Fragen:",
+    "result.score": "Punktzahl:",
+    "result.result": "Resultat:",
+    "result.question number": "Frage Nummer",
+    "result.question score": "Punktzahl",
+    "result.question review title": "Diese Frage überprüfen",
     "result.click a question to review": "Click on a question number to see how your answers were marked and, where available, full solutions.",
-    "end.exam has finished": "The exam has finished. You may now close this window.",
-    "control.confirm leave": "You haven't finished the exam.",
-    "control.not all questions answered": "You have not completed every question in this exam.",
-    "control.not all questions submitted": "You have made changes to one or more answers but not submitted them. Please check each question has been submitted.",
+    "end.exam has finished": "Die Prüfung wurde beendet und dieses Fenster kann geschlossen werden.",
+    "control.confirm leave": "Du hast die Prüfung noch nicht beendet.",
+    "control.not all questions answered": "Du hast nicht alle Fragen dieser Prüfung beantwortet.",
+    "control.not all questions submitted": "Du hast einige Antworten bearbeitet aber nicht abgesendet. Bitte überprüfe ob du alle Antworten verschickt hast.",
     "control.confirm end": "Are you sure you want to end the exam? After you end the exam, you will not be able to change any of your answers.",
     "control.confirm regen": "Would you like to re-randomise this question? If you click OK, all your answers and marks for the current question will be lost.",
     "control.confirm reveal": "Would you like to reveal the answer to this question? Any marks you have received so far will be locked and you will not be able to answer this question later.",
-    "control.proceed anyway": "Proceed anyway?",
-    "control.regen": "Try another question like this one",
-    "control.submit answer": "Submit answer",
-    "control.submit all parts": "Submit all parts",
-    "control.submit again": "Submit again",
-    "control.submit": "Submit",
-    "control.previous": "Previous",
-    "control.next": "Next",
-    "control.advice": "Advice",
-    "control.reveal": "Reveal answers",
+    "control.proceed anyway": "Trotzdem fortfahren?",
+    "control.regen": "Eine andere Frage im selben Stil ausprobieren",
+    "control.submit answer": "Antwort absenden",
+    "control.submit all parts": "Alle Teile absenden",
+    "control.submit again": "Erneut absenden",
+    "control.submit": "Absenden",
+    "control.previous": "Vorherige",
+    "control.next": "Nächste",
+    "control.advice": "Ratschlag",
+    "control.reveal": "Lösungen anzeigen",
     "control.total": "Total",
     "control.pause": "Pause",
-    "control.end exam": "End Exam",
-    "control.back to results": "Go back to results",
+    "control.end exam": "Prüfung beenden",
+    "control.back to results": "Zurück zu den Resultaten",
     "display.part.jme.error making maths": "Error making maths display",
     "exam.xml.bad root": "Root element of exam XML should be 'exam'",
     "exam.changeQuestion.no questions": "This exam contains no questions! Check the .exam file for errors.",
